[gd_scene load_steps=5 format=2]

[ext_resource path="res://Lockpick/Lockpick.gd" type="Script" id=1]
[ext_resource path="res://Assets/Text/bit5x3.ttf" type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 2 )

[node name="Lockpick" type="Node2D"]
position = Vector2( 171.975, 82.7529 )
scale = Vector2( 5, 5 )
script = ExtResource( 1 )

[node name="Control" type="Control" parent="."]
margin_left = -0.166603
margin_top = 0.166615
margin_right = 39.8334
margin_bottom = 40.1666
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Control"]
margin_left = 53.8157
margin_top = 17.6609
margin_right = 69.8157
margin_bottom = 31.6609
custom_fonts/font = SubResource( 1 )
text = "0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TimerLabel" type="Label" parent="Control"]
margin_left = 54.1489
margin_top = -14.9951
margin_right = 70.1489
margin_bottom = -0.995092
custom_fonts/font = SubResource( 1 )
text = "0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GoalLabel" type="Label" parent="Control"]
margin_left = 54.0
margin_right = 79.0
margin_bottom = 14.0
custom_fonts/font = SubResource( 2 )
text = "0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TempoText" type="Label" parent="Control"]
anchor_left = -4.76837e-08
anchor_top = -0.00416529
anchor_bottom = -0.00416527
margin_left = -29.0
margin_top = -13.8334
margin_right = 60.0
margin_bottom = -0.833389
custom_fonts/font = SubResource( 2 )
text = "tempo    ="
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ObjetivoText" type="Label" parent="Control"]
margin_left = -29.0
margin_right = 59.0
margin_bottom = 15.0
custom_fonts/font = SubResource( 2 )
text = "Objetivo = "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Timer" parent="."]
wait_time = 5.0

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
